--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "build": "webpack --mode=production",
+    "build": "webpack --mode=develop",
+    "deploy_dev": "webpack --mode=development",
     "dev": "webpack serve --mode=development"
   },
   "author": "Simone",
