--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "test",
     "build": "webpack --mode=development",
-    "deploy_dev": "webpack --mode=development",
+    "deploy:dev": "webpack --mode=development",
     "dev": "webpack serve --mode=development"
   },
   "author": "Simone",
