--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode=development",
+    "build": "webpack --mode=production",
     "deploy:dev": "webpack --mode=development",
     "dev": "webpack serve --mode=development"
   },
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "firebase": "^9.14.0",
+    "npx": "^10.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
