--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,6 @@
 {
   "hosting": {
-    "public": "public",
-    "site": "todolistsimone",
+    "public": "build",
     "ignore": [
       "firebase.json",
       "**/.*",
