--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.2",
     "html-webpack-plugin": "^5.5.0",
+    "react-error-overlay": "6.0.9",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
@@ -23,6 +24,7 @@
   },
   "dependencies": {
     "firebase": "^9.14.0",
+    "firebase-admin": "^11.3.0",
     "npx": "^10.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
