--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.10.15",
+    "@mui/material": "^5.10.15",
     "firebase": "^9.14.0",
     "firebase-admin": "^11.3.0",
     "npx": "^10.2.2",
